--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,14 +1,10 @@
-name: "Build and Deploy"
+name: "Deploy Pages"
 
 on:
   push:
     branches:
-      - main
       - master
-    paths-ignore:
-      - .gitignore
-      - README.md
-      - LICENSE
+      - main
   workflow_dispatch:
 
 permissions:
@@ -23,8 +19,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout (with submodules)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -40,30 +37,18 @@ jobs:
           ruby-version: "3.1"
           bundler-cache: true
 
-      # (선택) 서브모듈이 가끔 꼬일 때 안정화
-      - name: Ensure submodules
-        run: |
-          git submodule sync --recursive
-          git submodule update --init --recursive
-
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
           node-version: lts/*
 
       - name: Build Assets
-        run: npm ci && npm run build
+        run: npm install && npm run build
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: "production"
-
-      - name: Test site
-        run: |
-          bundle exec htmlproofer "_site${{ steps.pages.outputs.base_path }}" \
-            --disable-external \
-            --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
